# oak-d_isaac_perceptor

./: .gitignore  .gitmodules  .isaac_ros_common-config  README.md  frames_2025-03-13_16.11.17.gv
.devcontainer/: devcontainer.json
isaac_ros_assets/isaac_ros_nvblox/galileo_people_3_2/: metadata.yaml
isaac_ros_assets/isaac_ros_nvblox/galileo_static_3_2/: metadata.yaml
isaac_ros_assets/isaac_ros_segment_anything/: quickstart_interface_specs.json  yolo_interface_specs.json  zed2_quickstart_interface_specs.json  zedx_quickstart_interface_specs.json
isaac_ros_assets/isaac_ros_unet/: quickstart_interface_specs.json
isaac_ros_assets/isaac_ros_unet/quickstart.bag/: metadata.yaml
isaac_ros_assets/models/peoplesemsegnet/deployable_quantized_vanilla_unet_onnx_v2.0/: config.pbtxt
isaac_ros_assets/models/peoplesemsegnet/optimized_deployable_shuffleseg_unet_amr_v1.0/: config.pbtxt
my_ws/extracted_data/: display_voxel_grid_from_csv.py
my_ws/extracted_data/bottle_0.025/: voxels_0.csv  voxels_1.csv  voxels_10.csv  voxels_11.csv  voxels_12.csv  voxels_13.csv  voxels_2.csv  voxels_3.csv  voxels_4.csv  voxels_5.csv  voxels_6.csv  voxels_7.csv  voxels_8.csv  voxels_9.csv
my_ws/extracted_data/bottle_0.050/: voxels_0.csv  voxels_1.csv  voxels_10.csv  voxels_11.csv  voxels_12.csv  voxels_13.csv  voxels_14.csv  voxels_15.csv  voxels_16.csv  voxels_17.csv  voxels_18.csv  voxels_19.csv  voxels_2.csv  voxels_3.csv  voxels_4.csv  voxels_5.csv  voxels_6.csv  voxels_7.csv  voxels_8.csv  voxels_9.csv
my_ws/extracted_data/bottle_voxel_map_0.050/: metadata.yaml
my_ws/extracted_data/box_0.025/: voxels_0.csv  voxels_1.csv  voxels_10.csv  voxels_11.csv  voxels_12.csv  voxels_13.csv  voxels_14.csv  voxels_15.csv  voxels_16.csv  voxels_17.csv  voxels_18.csv  voxels_2.csv  voxels_3.csv  voxels_4.csv  voxels_5.csv  voxels_6.csv  voxels_7.csv  voxels_8.csv  voxels_9.csv
my_ws/extracted_data/box_0.05/: voxels_0.csv  voxels_1.csv  voxels_10.csv  voxels_11.csv  voxels_12.csv  voxels_13.csv  voxels_14.csv  voxels_15.csv  voxels_16.csv  voxels_17.csv  voxels_18.csv  voxels_19.csv  voxels_2.csv  voxels_20.csv  voxels_4.csv  voxels_5.csv  voxels_6.csv  voxels_7.csv  voxels_8.csv  voxels_9.csv
my_ws/extracted_data/box_voxel_map_0.050/: metadata.yaml
my_ws/my_bags/bottle_voxel_map_0.025/: metadata.yaml
my_ws/my_bags/box_voxel_map_0.025/: metadata.yaml
my_ws/my_bags/imu_calibration_set_24h/: metadata.yaml
my_ws/my_bags/oakd_isaac_perceptor_test/: metadata.yaml
my_ws/my_bags/voxel_grid_ex1/: metadata.yaml
my_ws/my_docker/: Dockerfile.mine  Dockerfile.oakd
my_ws/my_launch/: my_oak-d_perceptor.launch.py  stereo_inertial_node.launch.py
my_ws/my_launch/params/: my_rgbd_perceptor.yaml
my_ws/scripts/: display_ply.py  display_voxel_grid_from_csv.py  extract_voxel_grid.py  oakd_bandwidth_test.py  oakd_poe_test.py  test_o3d.py
my_ws/scripts/tmp/: voxel_grid.ply
src/bag_reading_cpp/: package.xml
src/isaac_ros_common/scripts/: run_dev.sh
src/my_oakd_launch/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_oakd_launch/config/: camera.yaml  my_rgbd_perceptor.yaml  nvblox_dynamics.yaml  nvblox_segmentation.yaml  rgbd.yaml
src/my_oakd_launch/launch/: camera.launch.py  isaac_perceptor.launch.py  my_oak-d_perceptor.launch.py  nvblox_dynamics.launch.py  nvblox_no_vslam.launch.py  nvblox_segmentation.launch.py  oakd_rgbd_isaac_perceptor.launch.py
src/my_oakd_launch/launch/include/: camera.py
src/my_oakd_launch/launch/tools/: camera.launch.py  visualization.launch.py
src/my_oakd_launch/my_oakd_launch/: image_converter.py
src/my_oakd_launch/src/: bounding_box_projection.cpp  extract_voxel_map.cpp
src/oakd_isaac_ros/: package.xml  setup.cfg  setup.py
src/oakd_isaac_ros/config/: nvblox_dynamics.yaml
src/oakd_isaac_ros/config/nvblox/: fuser.yaml  nvblox_base.yaml
src/oakd_isaac_ros/config/oak_d/: camera.yaml  oakd_rgbd.yaml
src/oakd_isaac_ros/launch/: nvblox_dynamics.launch.py
(+9 files in other folders)
